Initial Structure Commit.